--- a/QuizPage/quiz.css
+++ b/QuizPage/quiz.css
@@ -42,8 +42,8 @@ body {
 
 .quiz-options {
   display: flex;
-  flex-direction: column;
-  gap: 10px;
+  flex-direction: row;
+  gap: 15px;
 }
 
 .quiz-option {
@@ -74,14 +74,25 @@ body {
   background-color: #2c2c2c;
 }
 
-.quiz-form {
-  margin-bottom: 50px;
+.back-to-home {
+  background-color: #4c4c4c;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  float: right;
 }
 
-.quiz-submit {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: 1rem;
+.back-to-home:hover {
+  background-color: #2c2c2c;
+}
+
+
+.quiz-form {
+  margin-bottom: 50px;
 }
 
