--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body {
   
   .logo img {
     max-height: 50px;
+    max-width: 100%;
+    mix-blend-mode: multiply;
+    size: 5px;
   }
   
   nav ul {
@@ -30,7 +33,11 @@ body {
     color: #fff;
     text-decoration: none;
   }
-  
+
+  li a:hover {
+    background-color: #333;
+  }
+
   main {
     max-width: 800px;
     margin: 0 auto;
@@ -43,7 +50,7 @@ body {
   }
   
   .hero h1 {
-    font-size: 48px;
+    font-size: 44px;
     margin-bottom: 10px;
   }
   
@@ -122,5 +129,8 @@ body {
     color: #fff;
     text-align: center;
     padding: 10px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
   }
   
