--- a/QuizPage/quiz.css
+++ b/QuizPage/quiz.css
@@ -1,13 +1,13 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f8f8f8;
-  color: #333;
+  background-color: #394867;
+  color: #212A3E;
 }
 
 .quiz-container {
   max-width: 600px;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #F1F6F9;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -30,7 +30,7 @@ body {
   padding: 20px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  background-color: #f7d7d7;
+  background-color:#9BA4B5;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
@@ -55,7 +55,7 @@ body {
 }
 
 .quiz-option:hover {
-  background-color: #e0e0e0;
+  background-color: #ff6700;
 }
 
 .quiz-submit {
@@ -71,7 +71,7 @@ body {
 }
 
 .quiz-submit:hover {
-  background-color: #2c2c2c;
+  background-color:#ff6700;
 }
 
 .back-to-home {
@@ -88,7 +88,7 @@ body {
 }
 
 .back-to-home:hover {
-  background-color: #2c2c2c;
+  background-color:#ff6700;
 }
 
 
