--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'PT Serif', serif;
+  background-color:#F1F6F9;
+
 }
 
 header {
-  background-color: #333;
+  background-color: #394867;
   color: #fff;
   display: flex;
   justify-content: space-between;
@@ -35,7 +37,7 @@ nav a {
 }
 
 li a:hover {
-  background-color: #333;
+  background-color: #ff6700;
 }
 
 main {
@@ -70,7 +72,7 @@ form input[type="text"] {
 form button[type="submit"] {
   padding: 10px 16px;
   font-size: 16px;
-  background-color: #333;
+  background-color:#394867;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -209,7 +211,7 @@ form button[type="submit"] {
 }
 
 footer {
-  background-color: #333;
+  background-color: #394867;
   color: #fff;
   text-align: center;
   width: 100%;
